# bevy_easy_websockets

./: Cargo.toml  README.MD  bevy_spicy_networking_license.txt
examples/: client.rs  server.rs  shared.rs
src/: client.rs  error.rs  lib.rs  network_message.rs  server.rs
