[package]
name = "bevy_easy_websockets"
version = "0.1.0"
authors = ["Noah Shomette <noahshomette@gmail.com>"]
edition = "2021"
description = "A simple and crate level extensible websocket networking solution"
readme = "README.md"
repository = "https://github.com/NoahShomette/bevy_simple_websockets"
license = "MIT"
categories = ["game-development", "network-programming"]
autoexamples = false
exclude =  ["assets"]
resolver = "2"

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "client"

[[example]]
name = "server"


[dependencies]
bevy = { version = "0.9.0", features = [], default-features = false }
bincode = "1.3.2"
crossbeam-channel = "0.5.0"
dashmap = "5.4.0"
derive_more = "0.99.13"
downcast-rs = "1.2.0"
serde = { version = "1.0.125", features = ["derive"] }
thiserror = "1.0.24"
tokio = { version = "1.21.2", features = ["net", "io-util", "sync", "rt-multi-thread"] }
typetag = "0.2.3"
url = "2.3.1"
tokio-tungstenite = "0.17.2"
tungstenite = "0.17.3"
futures-util = { version = "0.3.25" }



[dev-dependencies]
bevy = { version = "0.9.0", features = ["bevy_asset", "bevy_scene", "bevy_gilrs", "bevy_winit", "animation", "x11",  "filesystem_watcher", "render", "serialize",], default-features = false }
